--- a/Resources/Prototypes/SoundCollections/expeditions.yml
+++ b/Resources/Prototypes/SoundCollections/expeditions.yml
@@ -9,3 +9,4 @@
   files:
   - /Audio/Expedition/tension_session.ogg
   - /Audio/Expedition/deadline.ogg
+  - /Audio/_Duty/SONGS/tarkov/Countdown.ogg
