--- a/Resources/Prototypes/SoundCollections/screams.yml
+++ b/Resources/Prototypes/SoundCollections/screams.yml
@@ -22,6 +22,55 @@
     - /Audio/Voice/Human/malescream_4.ogg
     - /Audio/Voice/Human/malescream_5.ogg
     - /Audio/Voice/Human/malescream_6.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_05.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_07.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_08.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_09.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_10.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_11.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_12.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_14.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_15.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_16.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_17.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_18.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_19.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_20.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_21.ogg
+    - /Audio/_Duty/BattleCries/усёк/bear3_fight_22.ogg6
+    - /Audio/_Duty/BattleCries/усёк/Gluhar_fight_23.ogg
+    - /Audio/_Duty/BattleCries/усёк/Gluhar_fight_24.ogg
+    - /Audio/_Duty/BattleCries/усёк/Gluhar_fight_25.ogg
+    - /Audio/_Duty/BattleCries/усёк/Gluhar_fight_26.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_02.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_03.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_04.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_05.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_06.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_07.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_08.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_09.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_10.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_11.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_12.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_16.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_18.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_21.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_22.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_23.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_24.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_25.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_26.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_27.ogg
+    - /Audio/_Duty/BattleCries/тагила/tagilla_fight_30.ogg
+    - /Audio/_Duty/BattleCries/Emotes/malescream_1.ogg
+    - /Audio/_Duty/Emotes/malescream_2.ogg
+    - /Audio/_Duty/Emotes/malescream_3.ogg
+    - /Audio/_Duty/Emotes/malescream_4.ogg
+    - /Audio/_Duty/Emotes/malescream_5.ogg
+    - /Audio/_Duty/Emotes/malescream_6.ogg
+    - /Audio/_Duty/Emotes/death_scream2.ogg
+    - /Audio/_Duty/Emotes/scream.ogg
 
 - type: soundCollection
   id: FemaleScreams
